cm4all-workshop (2.0.3) unstable; urgency=low

  * workshop: load configuration from /etc/cm4all/workshop/workshop.conf
  * cron: fix job execution use-after-free bug
  * cron: support multiple databases ("partitions")
  * support PostgreSQL schemas

 --   

cm4all-workshop (2.0.2) unstable; urgency=low

  * spawn: no signal interruption while waiting for client to become ready
  * cron: new sub-project which is instructed by a translation server

 -- Max Kellermann <mk@cm4all.com>  Wed, 23 Nov 2016 15:56:43 -0000

cm4all-workshop (2.0.1) unstable; urgency=low

  * use monotonic clock instead of real-time clock
  * fix file descriptor leaks
  * suport syslog over IPv6
  * load plans from /usr/share/cm4all/workshop/plans
  * import the beng-proxy child process spawner
  * require systemd
  * systemd: set Type=notify

 -- Max Kellermann <mk@cm4all.com>  Mon, 10 Oct 2016 17:31:41 -0000

cm4all-workshop (1.0.12) unstable; urgency=low

  * init: auto-create /var/run/cm4all
  * systemd: tweak Linux CPU scheduler settings

 -- Max Kellermann <mk@cm4all.com>  Tue, 06 Sep 2016 20:28:01 -0000

cm4all-workshop (1.0.11) unstable; urgency=low

  * fix chroot
  * enable the systemd service automatically

 -- Max Kellermann <mk@cm4all.com>  Thu, 18 Aug 2016 12:04:30 -0000

cm4all-workshop (1.0.10) unstable; urgency=low

  * systemd: implement "reload" using SIGHUP
  * systemd: enforce journal identifier "cm4all-workshop"

 -- Max Kellermann <mk@cm4all.com>  Mon, 18 Jul 2016 11:50:28 -0000

cm4all-workshop (1.0.9) unstable; urgency=low

  * systemd support, log to journald

 -- Max Kellermann <mk@cm4all.com>  Mon, 21 Dec 2015 09:04:34 -0000

cm4all-workshop (1.0.8) unstable; urgency=low

  * queue: add missing check to take advantage of INDEX "jobs_release"

 -- Max Kellermann <mk@cm4all.com>  Fri, 07 Nov 2014 09:07:45 -0000

cm4all-workshop (1.0.7) unstable; urgency=low

  * doc: allow UPDATE on unassigned jobs
  * sql: notify all clients when a job was finished