@@ -1,9 +1,12 @@
 # Example configuration file for cm4all-workshop
 
 #node_name "foo"
-#database "dbname=workshop"
-#database_schema "foo"
 #concurrency "8"
+
+#workshop {
+#  database "dbname=workshop"
+#  database_schema "foo"
+#}
 
 # Instead of editing this file, you can place local configuration in
 # the following locations:
